fix: edited the code

--- a/style.css
+++ b/style.css
@@ -21,19 +21,10 @@ li[class]{
 body,
 h1,
 h2,
-h3,
-h4,
-h5,
-h6,
 p,
 ul[class],
 ol[class],
-li,
-figure,
-figcaption,
-blockquote,
-dl,
-dd {
+li {
   margin: 0;
 }
 
@@ -105,7 +96,7 @@ body{
   content: '';
   border-bottom: solid 3px #176464;
   transform: scaleX(0);
-  transition: transform 250ms ease-in-out;
+  transition: transform 0.2s ease-in;
 }
 .nav__link:hover:after{
   transform: scaleX(1);
@@ -116,7 +107,7 @@ body{
 }
 .main__title{
   font-size: 26px;
-  color: rgb(23, 100, 100);
+  color: #176464;
   margin-bottom: 30px;
 }
 .contacts__span,
